<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="su.rbv.ecwid_sklad.ui.item.ItemViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/item_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/item_fragment_title"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/item_guide_v1"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/item_guide_v2"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/item_image_card"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/item_guide_v1"
                app:layout_constraintRight_toLeftOf="@id/item_guide_v2"
                app:layout_constraintDimensionRatio="H,3:2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_10"
                card_view:cardElevation="@dimen/cards_elevation"
                card_view:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_name_layout"
                style="@style/EditTextInputLayoutStyle"
                app:layout_constraintTop_toBottomOf="@id/item_image_card"
                app:layout_constraintLeft_toRightOf="@id/item_guide_v1"
                app:layout_constraintRight_toLeftOf="@id/item_guide_v2"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/item_hint_name"
                    android:enabled="@{viewModel.inputsEnable}"
                    android:text="@={viewModel.itemName}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_price_layout"
                style="@style/EditTextInputLayoutStyle"
                app:layout_constraintTop_toBottomOf="@id/item_name_layout"
                app:layout_constraintLeft_toRightOf="@id/item_guide_v1"
                app:layout_constraintRight_toLeftOf="@id/item_guide_v2"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_hint_price"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:digits="0123456789.,"
                    android:enabled="@{viewModel.inputsEnable}"
                    android:text="@={viewModel.itemPrice}"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/item_price_layout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/item_save"
                android:layout_marginTop="@dimen/margin_10"
                android:enabled="@{viewModel.saveButtonEnable}"
                android:onClick="@{() -> viewModel.onSaveClick()}"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/item_save"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/item_delete"
                android:layout_marginTop="@dimen/margin_10"
                android:enabled="@{viewModel.itemId != 0L}"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/item_delete"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/item_cancel"
                android:layout_marginTop="@dimen/margin_10"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    </LinearLayout>

</layout>